Bug 1632561: Self-host Object.prototype.__proto__ accessors. r=tcampbell

We don't support mixing self-hosted and native accessors in `JSPropertySpec`,
therefore we need to move the setter into self-hosted code, too, even though
we only need to have the getter self-hosted to be able to inline it.

Differential Revision: https://phabricator.services.mozilla.com/D72670