js/src/builtin/Object.h
@@ -36,6 +36,8 @@ MOZ_MUST_USE bool obj_is(JSContext* cx, unsigned argc, JS::Value* vp);
 
 MOZ_MUST_USE bool obj_toString(JSContext* cx, unsigned argc, JS::Value* vp);
 
+MOZ_MUST_USE bool obj_setProto(JSContext* cx, unsigned argc, JS::Value* vp);
+
 JSString* ObjectClassToString(JSContext* cx, HandleObject obj);
 
 MOZ_MUST_USE bool GetOwnPropertyKeys(JSContext* cx, HandleObject obj,
